# Nano-PDF

./: .gitignore  CHANGELOG.md  CONVERT_FEATURE.md  DEVELOPMENT_COMPLETE.md  FEATURE_SUMMARY.md  PDF_TO_PPT_GUIDE.md  QUICKSTART.md  README.md  create_sample_pdf.py  pyproject.toml  test_converter.py  test_full_conversion.pptx  test_output.pptx
doc/: API.md  ARCHITECTURE.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  FAQ.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: convert_pdf_demo.py
nano_pdf/: __init__.py  ai_utils.py  main.py  ppt_converter.py  ppt_utils.py
